# FuzzDistillCC

./: .clang-format  .gitignore  CMakeLists.txt  README.md  TODO.md
JulietBC/: LinuxIRs  MacIRs  consolidatefeatures.sh  fuzzcc  runonallbitc.py
JulietDatasetGen/: a_setupenv.sh  b_runonallbitc.py  c_consolidatefeatures.sh  fuzzdistillcc
JulietDatasetGen/Juliet1_3LinuxBitcs/: CWE121_Stack_Based_Buffer_Overflow__CWE129_connect_socket_01.bitc  CWE121_Stack_Based_Buffer_Overflow__CWE129_connect_socket_02.bitc  CWE121_Stack_Based_Buffer_Overflow__CWE129_connect_socket_03.bitc  CWE121_Stack_Based_Buffer_Overflow__CWE129_connect_socket_04.bitc  CWE121_Stack_Based_Buffer_Overflow__CWE129_connect_socket_05.bitc  CWE121_Stack_Based_Buffer_Overflow__CWE129_connect_socket_06.bitc  CWE121_Stack_Based_Buffer_Overflow__CWE129_connect_socket_07.bitc  CWE121_Stack_Based_Buffer_Overflow__CWE129_connect_socket_09.bitc  CWE121_Stack_Based_Buffer_Overflow__CWE129_connect_socket_10.bitc  CWE121_Stack_Based_Buffer_Overflow__CWE129_connect_socket_11.bitc  CWE121_Stack_Based_Buffer_Overflow__CWE129_connect_socket_13.bitc  CWE121_Stack_Based_Buffer_Overflow__CWE129_connect_socket_14.bitc  CWE121_Stack_Based_Buffer_Overflow__CWE129_connect_socket_15.bitc  CWE121_Stack_Based_Buffer_Overflow__CWE129_connect_socket_16.bitc  CWE121_Stack_Based_Buffer_Overflow__CWE129_connect_socket_18.bitc  CWE121_Stack_Based_Buffer_Overflow__CWE129_connect_socket_21.bitc  CWE121_Stack_Based_Buffer_Overflow__CWE129_connect_socket_22b.bitc  CWE121_Stack_Based_Buffer_Overflow__CWE129_connect_socket_31.bitc  CWE121_Stack_Based_Buffer_Overflow__CWE129_connect_socket_32.bitc  CWE121_Stack_Based_Buffer_Overflow__CWE129_connect_socket_33.bitc  CWE121_Stack_Based_Buffer_Overflow__CWE129_connect_socket_34.bitc  CWE121_Stack_Based_Buffer_Overflow__CWE129_connect_socket_41.bitc  CWE121_Stack_Based_Buffer_Overflow__CWE129_connect_socket_42.bitc  CWE121_Stack_Based_Buffer_Overflow__CWE129_connect_socket_43.bitc  CWE121_Stack_Based_Buffer_Overflow__CWE129_connect_socket_45.bitc  CWE121_Stack_Based_Buffer_Overflow__CWE129_connect_socket_51a.bitc  CWE121_Stack_Based_Buffer_Overflow__CWE129_connect_socket_51b.bitc  CWE121_Stack_Based_Buffer_Overflow__CWE129_connect_socket_52c.bitc  CWE121_Stack_Based_Buffer_Overflow__CWE129_connect_socket_53a.bitc  CWE121_Stack_Based_Buffer_Overflow__CWE129_connect_socket_53b.bitc  CWE121_Stack_Based_Buffer_Overflow__CWE129_connect_socket_53d.bitc  CWE121_Stack_Based_Buffer_Overflow__CWE129_connect_socket_54a.bitc  CWE121_Stack_Based_Buffer_Overflow__CWE129_connect_socket_54b.bitc  CWE121_Stack_Based_Buffer_Overflow__CWE129_connect_socket_61a.bitc  CWE121_Stack_Based_Buffer_Overflow__CWE129_connect_socket_62a.bitc  CWE121_Stack_Based_Buffer_Overflow__CWE129_connect_socket_63b.bitc  CWE121_Stack_Based_Buffer_Overflow__CWE129_connect_socket_64a.bitc  CWE121_Stack_Based_Buffer_Overflow__CWE129_connect_socket_64b.bitc  CWE121_Stack_Based_Buffer_Overflow__CWE129_connect_socket_65a.bitc  CWE121_Stack_Based_Buffer_Overflow__CWE129_connect_socket_65b.bitc  (+48172 more)
JulietDatasetGen/Juliet1_3MacBitcs/: CWE121_Stack_Based_Buffer_Overflow__CWE129_connect_socket_01.bitc  CWE121_Stack_Based_Buffer_Overflow__CWE129_connect_socket_02.bitc  CWE121_Stack_Based_Buffer_Overflow__CWE129_connect_socket_03_1.bitc  CWE121_Stack_Based_Buffer_Overflow__CWE129_connect_socket_04.bitc  CWE121_Stack_Based_Buffer_Overflow__CWE129_connect_socket_05_1.bitc  CWE121_Stack_Based_Buffer_Overflow__CWE129_connect_socket_06.bitc  CWE121_Stack_Based_Buffer_Overflow__CWE129_connect_socket_07.bitc  CWE121_Stack_Based_Buffer_Overflow__CWE129_connect_socket_08.bitc  CWE121_Stack_Based_Buffer_Overflow__CWE129_connect_socket_09_1.bitc  CWE121_Stack_Based_Buffer_Overflow__CWE129_connect_socket_10_1.bitc  CWE121_Stack_Based_Buffer_Overflow__CWE129_connect_socket_11.bitc  CWE121_Stack_Based_Buffer_Overflow__CWE129_connect_socket_13_1.bitc  CWE121_Stack_Based_Buffer_Overflow__CWE129_connect_socket_16_1.bitc  CWE121_Stack_Based_Buffer_Overflow__CWE129_connect_socket_17.bitc  CWE121_Stack_Based_Buffer_Overflow__CWE129_connect_socket_18.bitc  CWE121_Stack_Based_Buffer_Overflow__CWE129_connect_socket_22b.bitc  CWE121_Stack_Based_Buffer_Overflow__CWE129_connect_socket_32.bitc  CWE121_Stack_Based_Buffer_Overflow__CWE129_connect_socket_33_1.bitc  (+48000 more)
docs/: CFGIdea.md  FeatureSelection.md  Features.md  HelperScripts.md  MLpython.md  Notes.md  ReproduceJulietDataset.md  cfgML.md  presentationideas.md  whyCFG.md
src/: CMakeLists.txt  fuzzdistillcc.cpp  main.cpp
src/BBFeaturesPass/: BBFeaturesPass.cpp  BBFeaturesPass.h  CMakeLists.txt
src/CFGAnalysisPass/: CFGAnalysisPass.cpp  CFGAnalysisPass.h  CMakeLists.txt
src/FnFeaturesPass/: CMakeLists.txt  FnFeaturesPass.cpp  FnFeaturesPass.h
src/Helpers/: BasicBlockInfo.cpp  BasicBlockInfo.h  FunctionInfo.h
src/Helpers/utils/: CMakeLists.txt  fuzzdistillcc_utilities.cpp  fuzzdistillcc_utilities.h  fuzzpiler_utilities.cpp  fuzzpiler_utilities.h
src/LoopFeaturesPass/: CMakeLists.txt  LoopFeaturesPass.cpp  LoopFeaturesPass.h
src/passes/: cfganalysispass.cpp  cfganalysispass.h
test/: Makefile  calculator.bc  calculator.cpp
(+32251 files in other folders)
